# vt-kate-syntax-highlighter

./: .gitignore  CMakeLists.txt  README.md  katesyntaxhighlightingrc2themes.sh  mergetheme.lua  mini_buf.hpp  theme_buffer.h  vt-kate-syntax-highlighter.cpp  vt-kate-syntax-trace-highlighter.cpp  vt-syntax-highlighter.kdev4  vthighlighter.cpp  vthighlighter.h  vttracehighlighter.cpp  vttracehighlighter.h
.kdev4/: vt-syntax-highlighter.kdev4
org.kde.syntax-highlighting/: syntax
org.kde.syntax-highlighting/themes/: my.theme
